--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" manifest="cache.appcache">
 <head>
   <meta charset="utf-8">
-  <title>98304</title>
+  <title>97104</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
-  <link href="style/tiles.css" rel="stylesheet" type="text/css">
+  <link href="style/tiles2.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,7 +24,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">98304</h1>
+      <h1 class="title">97104</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -32,7 +32,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>98304 tile!</strong></p>
+      <p class="game-intro">Is it possible to get to the <strong>97104 tile?</strong></p>
       <a class="restart-button">Play again</a>
     </div>
 
@@ -83,7 +83,7 @@
     </p>
     <hr>
     <p>
-    Click here for <a href="http://aarextiaokhiao.github.io/Aarex2048/list.html">the list.</a>
+    Created by <a href="github.com/thereal23">TheReal23.</a>
     </p>
   </div>
 
