--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>97104</title>
 
-  <link href="style/main.css" rel="stylesheet" type="text/css">
+  <link href="style/size5.css" rel="stylesheet" type="text/css">
   <link href="style/tiles2.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
@@ -95,11 +95,11 @@
   <script src="js/grid.js"></script>
   <script src="js/tile.js"></script>
   <script src="js/local_storage_manager.js"></script>
-  <script src="js/game_manager_threes.js"></script>
+  <script src="js/game_manager.js"></script>
   <script>
-  var Goal = 98304
+  var Goal = 97104
   window.requestAnimationFrame(function () {
-  new GameManager(4, KeyboardInputManager, HTMLActuator, LocalStorageManager);
+  new GameManager(5, KeyboardInputManager, HTMLActuator, LocalStorageManager);
   });
   </script>
 
